# RustSMB

./: .gitignore  Cargo.toml  LICENSE  PORTING.md  README.md
examples/hnfs/: Cargo.toml  README.md
examples/hnfs/src/: main.rs
examples/smbperf/: Cargo.toml
examples/smbperf/src/: main.rs
src/: backend.rs  builder.rs  dispatch.rs  error.rs  info_class.rs  lib.rs  ntstatus.rs  path.rs  quic.rs  server.rs
src/conn/: mod.rs  reader.rs  state.rs  writer.rs
src/fs/: local.rs
src/handlers/: change_notify.rs  close.rs  create.rs  dcerpc.rs  ioctl.rs  lock.rs  logoff.rs  mod.rs  negotiate.rs  oplock_break.rs  query_directory.rs  query_info.rs  read.rs  session_setup.rs  set_info.rs  tree_connect.rs  tree_disconnect.rs  write.rs
src/proto/: crypto.rs  framing.rs  header.rs
src/proto/auth/: ntlm.rs  spnego.rs
src/proto/crypto/: compression.rs  encryption.rs  kdf.rs  sign.rs
src/proto/messages/: cancel.rs  change_notify.rs  close.rs  create.rs  echo.rs  flush.rs  ioctl.rs  lock.rs  logoff.rs  mod.rs  negotiate.rs  oplock_break.rs  query_directory.rs  query_info.rs  read.rs  session_setup.rs  set_info.rs  tree_connect.rs  tree_disconnect.rs  write.rs
src/tests/: dynamic_config.rs  memfs.rs
tests/: cloudsoda_smoke.rs  integration_compound.rs  integration_ipc.rs  integration_localfs.rs  integration_locks.rs  integration_negotiate.rs  integration_quic.rs  mount_smbfs_smoke.rs  smbclient_smoke.rs  smbtorture_smoke.rs  smbutil_smoke.rs
tests/common/: mod.rs
tools/: porting-matrix-audit.sh  porting-test-audit.sh  porting-test-reviewed.tsv  wanem.sh
